# cashflow-app

./: .gitignore  CHANGELOG.md  CLAUDE.md  COMPLIANCE.md  README.md  pyproject.toml
data/: test_28m.csv
data/synthetic/: realistic_utf.csv
docs/: 2025_12_19_orlando_next_steps.md  2026_01_12_plan_ahead.md  2026_01_12_response.md  2026_01_13_framework.md  compliance.md  handover.md  sdd.md
docs/Scripts/: 01_generate_utf_GPT.py  02_clean_utf_GPT.py  03_aggregate_monthly_GPT.py  04_outliers_GPT.py  05_forecast_GPT.py
docs/Scripts/data/: PoC_Forecast_Results.csv  PoC_Forecast_Summary.json  PoC_Monthly_Features.csv  PoC_Outliers_Treated.csv  PoC_UTF_Clean.csv  PoC_UTF_Dataset.csv
plots/: forecast_summary.csv
plots/noise_analysis/: summary_table.csv
plots/profile_analysis/: summary_table.csv
plots/robustness_analysis/: robustness_summary.csv
results/: wmape_results.csv  wmape_summary.csv
scripts/: __init__.py  analyze_noise_sensitivity.py  analyze_profile_wmape.py  data_generator.py  framework_config.py  generate_all_plots.py  generate_realistic_data.py  robustness_analysis.py  run_framework_tests.py  visualize_decomposition.py  visualize_forecast.py  visualize_scenarios.py
src/cashflow/: __init__.py  cli.py  utils.py
src/cashflow/engine/: README.md  __init__.py  config.py  forecast.py
src/cashflow/explainability/: README.md  __init__.py  builder.py
src/cashflow/features/: README.md  __init__.py  exogenous.py  time.py
tests/: __init__.py  conftest.py  test_improvements.py
tests/integration/: __init__.py  test_pipeline_e2e.py
tests/unit/: __init__.py  test_analysis_fixes.py  test_bugfixes.py  test_models.py  test_outliers.py  test_tirex.py  test_transfer.py
(+44 files in other folders)
